2009-08-18  Ankit Jain  <jankit@novell.com>

	* BatchingImplBase.cs: Make the item name lookups and metadata be case
	insensitive.
	* TaskDatabase.cs: Likewise.
	* TaskEngine.cs: Make property name looks, case insensitive.

2009-08-09  Miguel de Icaza  <miguel@novell.com>

	* ConsoleLogger.cs: Change the format of the error and warnings
	strings to work when invoked inside Emacs by not rendering the
	column if available, by using lowercase "error"/"warning" strings
	instead of camelcased versions and to not have unnecessary padding.

2009-07-31  Ankit Jain  <jankit@novell.com>

	* ConsoleLogger.cs: Keep track of all the errors and warnings
	and show them at the end.

2009-07-31  Ankit Jain  <jankit@novell.com>

	* Target.cs (Build): Log a message if a target is skipped.
	(LogMessage): New.
	* BuildTask.cs (Execute): Log error if task execution fails.

2009-07-30  Ankit Jain  <jankit@novell.com>

	* Engine.cs (.ctor): Set default BinPath. Currently this assumes
	v2.0, this will change when multi-targeting lands.

2009-07-30  Ankit Jain  <jankit@novell.com>

	* Project.cs (InitializeProperties) Set 'MSBuildProjectFile' and
	'MSBuildProjectName' properties.

2009-07-28  Ankit Jain  <jankit@novell.com>

	* TaskEngine.cs (Prepare): Fix formatting mistake.
	* ConsoleLogger.cs: Emit "-- FAILED" also when project/target building
	fails. Also, emit result of project at Normal verbosity level.

2009-07-23  Ankit Jain  <jankit@novell.com>

	Fix bug #511370.
	* Project.cs (ExtensionsPath): New.
	(InitializeProperties): Set "MSBuildExtensionsPath" property.

2009-06-12  Ankit Jain  <jankit@novell.com>

	Fix bug #512535.
	* ExpressionCollection.cs (ConvertToITaskItemArray): Whitespace around a
	itemref is allowed if the prev/next element is ";".

2009-06-12  Ankit Jain  <jankit@novell.com>

	* Utilities.cs (FromMSBuildPath): Return null if the path contains
	"drive:" only on windows.

2009-06-07  Ankit Jain  <jankit@novell.com>
