@@ -1,3 +1,10 @@
+2009-08-20  Ankit Jain  <jankit@novell.com>
+
+	* BuildTask.cs (Execute): Use task_logger only after the task
+	has been initialized. Catch and report task loading errors.
+	* Target.cs (DoBuild): Dont rethrow the exception, and emit
+	the stacktrace as a low importance message.
+
 2009-08-18  Ankit Jain  <jankit@novell.com>
 
 	* BatchingImplBase.cs: Make the item name lookups and metadata be case
